[gd_scene load_steps=2 format=3 uid="uid://p27ceawjgy3w"]

[ext_resource type="Script" path="res://src/Utility_scripts/Inventory/inventory_ui.gd" id="1_ducq2"]

[node name="InventoryUi" type="Node2D"]
script = ExtResource("1_ducq2")

[node name="Marker1" type="Marker2D" parent="."]
position = Vector2(-72, -47)

[node name="Marker2" type="Marker2D" parent="."]
position = Vector2(64, -47)

[node name="Marker3" type="Marker2D" parent="."]
position = Vector2(-71, 44)

[node name="Marker4" type="Marker2D" parent="."]
position = Vector2(68, 44)
